# fabric-chaincode-ocaml

./: .gitignore  .gitmodules  MAINTAINERS.md  Makefile  README.md  conf-libgrpc.opam  conf-libgrpc.opam.template  dune-project  fabric-chaincode-shim.opam  grpc-protoc-plugin.opam  grpc.opam
fabric-chaincode-shim/src/: FabricChaincodeShim.ml  shim.ml
fabric-chaincode-shim/tests/: dune  peer-chaincode-devmode.sh  peer-chaincode-external-launcher.sh  test.ml
fabric-chaincode-shim/tests/pkg/: dune  dune-project  test.ml
grpc/: GRPC.ml  core.ml  dune  function_description.ml  grpc_stub.c  helpers.ml  helpers.mli  type_description.ml
grpc-protoc-plugin/: GRPC_protoc_plugin.ml  GRPC_protoc_plugin.mli  dune
grpc-protoc-plugin/tests/echo/: client.ml  dune  run.t  server.ml
grpc-protoc-plugin/tests/helloworld/: client.ml  dune  run.t  server.ml
grpc/tests/: dune
grpc/tests/helloworld/: client.ml  run.t  server.ml
libgrpc/: dune  function_description.ml  helpers.ml  helpers.mli  type_description.ml
libgrpc/tests/: init.expected  init.ml
libgrpc/tests/helloworld/: client.ml  dune  run.t  server.ml
src/: dune  protobuf.ml  shim.ml  shim.mli
tests/: conversion.expected  conversion.ml  dune  test.ml
